# claudemux

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.flow/epics/: fn-1-discord-orchestrator-bot-for-claude.json
.flow/specs/: fn-1-discord-orchestrator-bot-for-claude.md
.flow/tasks/: fn-1-discord-orchestrator-bot-for-claude.1.json  fn-1-discord-orchestrator-bot-for-claude.1.md  fn-1-discord-orchestrator-bot-for-claude.2.json  fn-1-discord-orchestrator-bot-for-claude.2.md  fn-1-discord-orchestrator-bot-for-claude.3.json  fn-1-discord-orchestrator-bot-for-claude.3.md  fn-1-discord-orchestrator-bot-for-claude.4.json  fn-1-discord-orchestrator-bot-for-claude.4.md
discord_claude/: __main__.py  bot.py  config.py  pipe.py  session_manager.py
tests/: test_pipe_diff.py  test_pipe_rolling.py
