[project]
name = "claudemux"
version = "0.1.0"
description = "Multiplex Claude Code CLI sessions through Discord via tmux"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3",
    "python-dotenv>=1.0",
]

[project.scripts]
claudemux = "discord_claude.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
